--- a/MyJournalBlazor.styles.css
+++ b/MyJournalBlazor.styles.css
@@ -1,3 +1,72 @@
+/* /Shared/JournalingList.razor.rz.scp.css */
+.navbar-toggler[b-ploek8szza] {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.top-row[b-ploek8szza] {
+    height: 3.5rem;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.navbar-brand[b-ploek8szza] {
+    font-size: 1.1rem;
+}
+
+.oi[b-ploek8szza] {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+}
+
+.nav-item[b-ploek8szza] {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+}
+
+    .nav-item:first-of-type[b-ploek8szza] {
+        padding-top: 1rem;
+    }
+
+    .nav-item:last-of-type[b-ploek8szza] {
+        padding-bottom: 1rem;
+    }
+
+    .nav-item[b-ploek8szza]  a {
+        color: #d7d7d7;
+        border-radius: 4px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        line-height: 3rem;
+    }
+
+        .nav-item[b-ploek8szza]  a.active {
+            background-color: rgba(255,255,255,0.25);
+            color: white;
+        }
+
+        .nav-item[b-ploek8szza]  a:hover {
+            background-color: rgba(255,255,255,0.1);
+            color: white;
+        }
+
+@media (min-width: 641px) {
+    .navbar-toggler[b-ploek8szza] {
+        display: none;
+    }
+
+    .collapse[b-ploek8szza] {
+        /* Never collapse the sidebar for wide screens */
+        display: block;
+    }
+
+    .nav-scrollable[b-ploek8szza] {
+        /* Allow sidebar to scroll for tall menus */
+        height: calc(100vh - 3.5rem);
+        overflow-y: auto;
+    }
+}
 /* /Shared/MainLayout.razor.rz.scp.css */
 .page[b-bxgv4ycz4h] {
     position: relative;
